added current job position

--- a/index.html
+++ b/index.html
@@ -41,9 +41,15 @@
                 <h4 id="timeLine1"></h4>
             </div>
             <div class="seven columns offset-by-one">
-                <h2 id="company1"></h2>
-                <h3 id="positionCompany1"></h3>
+                <h2 id="company1">CVS Health</h2>
+                <h3 id="positionCompany1">Software Engineer</h3>
                 <p id="summaryCompany1">
+                    As a Software Engineer, I work on making changes to existing large scale application and use Java to primarily
+                    do backend development. Also, use SQL, Linux/Unix Systems.
+                    There is a lot of problem solving situations in this position as I also do production
+                    support for the retail side of cvs. Using such problem solving skills help me improve
+                    my software development skills because I have to learn and review code for large application to get up to speed and understand
+                    how the application work to be able to do any sort of changes.
 
                 </p>
             </div>
