added picture plus css

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="Stylesheets/main.css">
     <script type="text/javascript" src="Scripts/gettingJson.js"> </script>
-    <script type="application/json" src="Data/Info.json"></script>
+    <script type="application/json" src="Data/JobInfo.json"></script>
     <script type="text/javascript">initialize()</script>
 </head>
 
@@ -18,14 +18,20 @@
     <div class="container">
         <div class="row">
             <div class="nine columns">
-                <h1 id="userName"></h1>
-                <p id="summaryQuote"></p>
+                <h1 id="userName">Hector Mata</h1>
+                <p id="summaryQuote">Think "outside the box" Software Engineer and A.I Enthusiast</p>
                 <p id="summary">
-
+                    Self-Motivated Software Engineer with three year of experience in coding, testing and establishing
+                    system improvement that include both school work, and professional work. Ability to leverage
+                    full-stack knowledge and experience to build interactive and user-centered website designs to scale.
+                    Strong in design and integration problem-solving skills. My area of expertise include Java,
+                    SQL with database analysis and design, Python, Linux/Unix systems, HTML, CSS, Javascript.
+                    Always eager to find new challenges and always improve and expand my area of expertise.
+                    Skilled in requirements specifications, user documentation. String written and verbal communications.
                 </p>
             </div>
             <div class="three columns pic">
-                <img class="profile" src="images/pic.jpg" alt="">
+                <img class="profile" src="Images/pic.jpg" alt="">
                 <a href="mailto:hector.mata9@gmail.com">Email Me</a>
                 <a href="https://github.com/hectormata" target="_blank">Github</a>
                 <a href="https://www.linkedin.com/in/hector-mata-1009/" target="_blank">Linkedin</a>
