--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             </div>
             <div class="three columns pic">
                 <img class="profile" src="Images/pic.jpg" alt="">
-                <a href="mailto:hector.mata9@gmail.com">Email Me</a>
-                <a href="https://github.com/hectormata" target="_blank">Github</a>
-                <a href="https://www.linkedin.com/in/hector-mata-1009/" target="_blank">Linkedin</a>
+                <a href="mailto:hector.mata9@gmail.com" class="emailLink">Email Me</a>
+                <a href="https://github.com/hectormata" target="_blank" class="githubLink">Github</a>
+                <a href="https://www.linkedin.com/in/hector-mata-1009/" target="_blank" class="linkedinLink">Linkedin</a>
             </div>
         </div>
     </div>
@@ -44,7 +44,7 @@
         <div class="row">
             <div class="four columns timeline">
                 <h1>Experience</h1>
-                <h4 id="timeLine1"></h4>
+                <h4 id="timeLine1">January 2019 - Current</h4>
             </div>
             <div class="seven columns offset-by-one">
                 <h2 id="company1">CVS Health</h2>
