Added some new css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="row">
             <div class="nine columns">
-                <h1 id="userName">Hector Mata</h1>
+                <h1 class="example" id="userName">Hector Mata</h1>
                 <p id="summaryQuote">Think "outside the box" Software Engineer and A.I Enthusiast</p>
                 <p id="summary">
                     Self-Motivated Software Engineer with three year of experience in coding, testing and establishing
