Added logos for all the jobs

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     system improvement that include both school work, and professional work. Ability to leverage
                     full-stack knowledge and experience to build interactive and user-centered website designs to scale.
                     Strong in design and integration problem-solving skills. My area of expertise include Java,
+                    Strong in design and integration problem-solving skills. My area of expertise include Java,
                     SQL with database analysis and design, Python, Linux/Unix systems, HTML, CSS, Javascript.
                     Always eager to find new challenges and always improve and expand my area of expertise.
                     Skilled in requirements specifications, user documentation. String written and verbal communications.
@@ -48,6 +49,7 @@
             </div>
             <div class="seven columns offset-by-one">
                 <h2 id="company1">CVS Health</h2>
+                <img class="jobLogos" src="Images/favicon.png" alt="">
                 <h3 id="positionCompany1">Software Engineer</h3>
                 <p id="summaryCompany1">
                     As a Software Engineer, I work on making changes to existing large scale application and use Java to primarily
@@ -66,6 +68,7 @@
             </div>
             <div class="seven columns offset-by-one">
                 <h2 id="company2">IDEMIA</h2>
+                <img class="jobLogos" src="Images/idemiaLogo1.png" alt="">
                 <h3 id="positionCompany2">Data Analyst</h3>
                 <p id="summaryCompany2">
                     Primarily in charge of automating existing reports to improve efficiency and save the
@@ -84,6 +87,7 @@
             </div>
             <div class="seven columns offset-by-one">
                 <h2 id="company3">Tuft Health Plan</h2>
+                <img class="jobLogos" src="Images/TUFTS-Logo.png" alt="">
                 <h3 id="positionCompany3">Software Developer</h3>
                 <p id="summaryCompany3">
                     In this roles, I was faced with the challenge of learning a new language. Learning Lotus Notes framework
@@ -101,6 +105,7 @@
             </div>
             <div class="seven columns offset-by-one">
                 <h2 id="company4">Enterprise Rent-A-Car</h2>
+                <img class="jobLogos" src="Images/enterpriseLogo.png" alt="">
                 <h3 id="positionCompany4">Management Trainee Intern</h3>
                 <p id="summaryCompany4">
                     Provided excellent customer service and committed to show a great work ethic and outperformed others.
@@ -146,7 +151,8 @@
                 <h1>Education</h1>
             </div>
             <div class="seven columns offset-by-one">
-                <h2>University of Massachusetts - Boston</h2>
+                <h2 id="school1">University of Massachusetts - Boston</h2>
+                <img class="jobLogos" src="Images/beaconsLogo.png" alt="">
                 <h3>Bachelor of Science and Mathematics - Computer Science</h3>
                 <p>Varsity Soccer Team 2012 - 2014 <br>
                     Varsity Tennis Team 2014 - 2015
