--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="Stylesheets/main.css">
-    <script type="text/javascript" src="Scripts/gettingJson.js"> </script>
+    <script type="text/javascript" src="Scripts/NotReady/countButtonClicks.js"> </script>
     <script type="application/json" src="Data/JobInfo.json"></script>
     <script type="text/javascript">initialize()</script>
 </head>
