--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="Stylesheets/main.css">
     <script type="text/javascript" src="Scripts/NotReady/countButtonClicks.js"> </script>
+    <script type="text/javascript" src="Scripts/FetchingJson.js"> </script>
     <script type="application/json" src="Data/JobInfo.json"></script>
-    <script type="text/javascript">initialize()</script>
+    <script type="text/javascript">fetchJSONFile("https://hectormata.github.io/resume.github.io/Data/buttonsCount.json",console.log)</script>
 </head>
 
 <body>
