--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="Scripts/NotReady/countButtonClicks.js"> </script>
     <script type="text/javascript" src="Scripts/FetchingJson.js"> </script>
     <script type="application/json" src="Data/JobInfo.json"></script>
+    <script type="application/json" src="Data/buttonsCount.json"></script>
     <script type="text/javascript">fetchJSONFile("https://hectormata.github.io/resume.github.io/Data/buttonsCount.json",console.log)</script>
 </head>
 
