--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
         <div class="row">
             <div class="four columns timeline">
                 <h1>Experience</h1>
-                <h4 id="timeLine1">January 2019 - Current</h4>
+                <h4 id="timeLine1">October 2019 - Current</h4>
             </div>
             <div class="seven columns offset-by-one">
-                <h2 id="company1">CVS Health</h2>
-                <img class="jobLogos" src="Images/favicon.png" alt="">
-                <h3 id="positionCompany1">Software Engineer</h3>
+                <h2 id="company1">Teladoc Health</h2>
+                <img class="jobLogos" src="Images/download.png" alt="">
+                <h3 id="positionCompany1">Full-Stack Software Engineer</h3>
                 <p id="summaryCompany1">
                     As a Software Engineer, I work on making changes to existing large scale application and use Java to primarily
                     do backend development. Also, use SQL, Linux/Unix Systems.
@@ -66,13 +66,73 @@
         </div>
         <div class="row">
             <div class="four columns timeline">
-                <h4 id="timeLine2">July 2018 - June 2019</h4>
+                <h1>Experience</h1>
+                <h4 id="timeLine2">October 2019 - Current</h4>
             </div>
             <div class="seven columns offset-by-one">
-                <h2 id="company2">IDEMIA</h2>
-                <img class="jobLogos" src="Images/idemiaLogo1.png" alt="">
-                <h3 id="positionCompany2">Data Analyst</h3>
+                <h2 id="company2">Raluce</h2>
+                <img class="jobLogos" src="Images/download.png" alt="">
+                <h3 id="positionCompany2">Software Engineer</h3>
                 <p id="summaryCompany2">
+                    As a Software Engineer, I work on making changes to existing large scale application and use Java to primarily
+                    do backend development. Also, use SQL, Linux/Unix Systems.
+                    There is a lot of problem solving situations in this position as I also do production
+                    support for the retail side of cvs. Using such problem solving skills help me improve
+                    my software development skills because I have to learn and review code for large application to get up to speed and understand
+                    how the application work to be able to do any sort of changes.
+
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="four columns timeline">
+                <h1>Experience</h1>
+                <h4 id="timeLine3">August 2019 - Current</h4>
+            </div>
+            <div class="seven columns offset-by-one">
+                <h2 id="company3">Alumbrado, Inc</h2>
+                <img class="jobLogos" src="Images/download.png" alt="">
+                <h3 id="positionCompany3">Lead Software Engineer</h3>
+                <p id="summaryCompany3">
+                    As a Software Engineer, I work on making changes to existing large scale application and use Java to primarily
+                    do backend development. Also, use SQL, Linux/Unix Systems.
+                    There is a lot of problem solving situations in this position as I also do production
+                    support for the retail side of cvs. Using such problem solving skills help me improve
+                    my software development skills because I have to learn and review code for large application to get up to speed and understand
+                    how the application work to be able to do any sort of changes.
+
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="four columns timeline">
+                <h1>Experience</h1>
+                <h4 id="timeLine4">January 2019 - September 2019</h4>
+            </div>
+            <div class="seven columns offset-by-one">
+                <h2 id="company4">CVS Health</h2>
+                <img class="jobLogos" src="Images/favicon.png" alt="">
+                <h3 id="positionCompany4">Software Engineer</h3>
+                <p id="summaryCompany4">
+                    As a Software Engineer, I work on making changes to existing large scale application and use Java to primarily
+                    do backend development. Also, use SQL, Linux/Unix Systems.
+                    There is a lot of problem solving situations in this position as I also do production
+                    support for the retail side of cvs. Using such problem solving skills help me improve
+                    my software development skills because I have to learn and review code for large application to get up to speed and understand
+                    how the application work to be able to do any sort of changes.
+
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="four columns timeline">
+                <h4 id="timeLine5">July 2018 - June 2019</h4>
+            </div>
+            <div class="seven columns offset-by-one">
+                <h2 id="company5">IDEMIA</h2>
+                <img class="jobLogos" src="Images/idemiaLogo1.png" alt="">
+                <h3 id="positionCompany5">Data Analyst</h3>
+                <p id="summaryCompany5">
                     Primarily in charge of automating existing reports to improve efficiency and save the
                     department money. In the year I was there about 10 reports were automated, helped the department saved
                     enough work hours equivalent to a full-time employee salary making 60K. The reports that I helped automated
@@ -85,13 +145,13 @@
         </div>
         <div class="row">
             <div class="four columns timeline">
-                <h4 id="timeLine3">September 2018 - January 2019</h4>
+                <h4 id="timeLine6">September 2018 - January 2019</h4>
             </div>
             <div class="seven columns offset-by-one">
-                <h2 id="company3">Tuft Health Plan</h2>
+                <h2 id="company6">Tuft Health Plan</h2>
                 <img class="jobLogos" src="Images/TUFTS-Logo.png" alt="">
-                <h3 id="positionCompany3">Software Developer</h3>
-                <p id="summaryCompany3">
+                <h3 id="positionCompany6">Software Developer</h3>
+                <p id="summaryCompany6">
                     In this roles, I was faced with the challenge of learning a new language. Learning Lotus Notes framework
                     initially was tough because it was new compared to anything I had done before. I was able to overcome my learning curve quickly
                     due to my ability to identify patterns, allowing me to see the similarities with Visual Basic for Application
@@ -103,13 +163,13 @@
         </div>
         <div class="row">
             <div class="four columns timeline">
-                <h4 id="timeLine4">May 2016 - July 2018</h4>
+                <h4 id="timeLine7">May 2016 - July 2018</h4>
             </div>
             <div class="seven columns offset-by-one">
-                <h2 id="company4">Enterprise Rent-A-Car</h2>
+                <h2 id="company7">Enterprise Rent-A-Car</h2>
                 <img class="jobLogos" src="Images/enterpriseLogo.png" alt="">
-                <h3 id="positionCompany4">Management Trainee Intern</h3>
-                <p id="summaryCompany4">
+                <h3 id="positionCompany7">Management Trainee Intern</h3>
+                <p id="summaryCompany7">
                     Provided excellent customer service and committed to show a great work ethic and outperformed others.
                     Due to my ability to work hard and be a top performer I was given more responsibilities than the average intern had.
                     This role was heavily customer services and sales oriented. I excelled in the sales aspect of the role by providing
