updated job summaries

--- a/index.html
+++ b/index.html
@@ -66,27 +66,21 @@
         </div>
         <div class="row">
             <div class="four columns timeline">
-                <h1>Experience</h1>
                 <h4 id="timeLine2">October 2019 - Current</h4>
             </div>
             <div class="seven columns offset-by-one">
                 <h2 id="company2">Raluce</h2>
-                <img class="jobLogos" src="Images/download.png" alt="">
+                <img class="jobLogos" src="Images/raluce-logo.png" alt="">
                 <h3 id="positionCompany2">Software Engineer</h3>
                 <p id="summaryCompany2">
-                    As a Software Engineer, I work on making changes to existing large scale application and use Java to primarily
-                    do backend development. Also, use SQL, Linux/Unix Systems.
-                    There is a lot of problem solving situations in this position as I also do production
-                    support for the retail side of cvs. Using such problem solving skills help me improve
-                    my software development skills because I have to learn and review code for large application to get up to speed and understand
-                    how the application work to be able to do any sort of changes.
-
+                    As a Software Engineer, working on creating websites for new restaurant clients to have them start
+                    taking order with out systems and start improving their orders volume by creating really user friendly
+                    website to ensure that users want to order online again through the customer's website.
                 </p>
             </div>
         </div>
         <div class="row">
             <div class="four columns timeline">
-                <h1>Experience</h1>
                 <h4 id="timeLine3">August 2019 - Current</h4>
             </div>
             <div class="seven columns offset-by-one">
@@ -94,19 +88,17 @@
                 <img class="jobLogos" src="Images/download.png" alt="">
                 <h3 id="positionCompany3">Lead Software Engineer</h3>
                 <p id="summaryCompany3">
-                    As a Software Engineer, I work on making changes to existing large scale application and use Java to primarily
-                    do backend development. Also, use SQL, Linux/Unix Systems.
-                    There is a lot of problem solving situations in this position as I also do production
-                    support for the retail side of cvs. Using such problem solving skills help me improve
-                    my software development skills because I have to learn and review code for large application to get up to speed and understand
-                    how the application work to be able to do any sort of changes.
-
+                    As Lead Software Engineer of 3 developers, leading the programming planning, requirements gathering,
+                    and development cycle. We worked on developing company website and main iOS application.
+                    Working with HTML, and Javascript primarily to develop company's website from scratch to show what
+                    we do and who we are. On iOS application. Lead the development of the application to be able to
+                    come out with design of new features. Leading with great leadership and motivation we are working
+                    to commit to our goals.
                 </p>
             </div>
         </div>
         <div class="row">
             <div class="four columns timeline">
-                <h1>Experience</h1>
                 <h4 id="timeLine4">January 2019 - September 2019</h4>
             </div>
             <div class="seven columns offset-by-one">
@@ -120,7 +112,6 @@
                     support for the retail side of cvs. Using such problem solving skills help me improve
                     my software development skills because I have to learn and review code for large application to get up to speed and understand
                     how the application work to be able to do any sort of changes.
-
                 </p>
             </div>
         </div>
@@ -187,6 +178,8 @@
 
                 <span>Java</span>
                 <span>SQL</span>
+                <span>Salesforce</span>
+                <span>Apex</span>
                 <span>Linux</span>
                 <span>Unix</span>
                 <span>HTML</span>
