Added new job to work experience

--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
 			<div class="row">
 				<div class="four columns timeline">
 					<h1 id="experienceSection">Experience</h1>
-					<h4 id="timeLine0">February 2021 - Current</h4>
+					<h4 id="timeLine0">September 2021 - Current</h4>
 				</div>
 				<div class="seven columns offset-by-one">
 					<h2 id="company0">Teladoc Health</h2>
-					<img class="jobLogos" src="Images/download.png" alt="">
+					<img class="jobLogos" src="Images/download.png" alt="Teladoc Health">
 					<h3 id="positionCompany0">Software Engineer III</h3>
 					<p id="summaryCompany0">
 						As a Full-Stack Software Engineer, working on Salesforce Stack - making changes to existing large scale application and use Java to primarily
@@ -96,15 +96,33 @@
 					</p>
 				</div>
 			</div>
+			<div class="row">
+				<div class="four columns timeline">
+					<h4 id="timeLine1">February 2021 - September 2021</h4>
+				</div>
+				<div class="seven columns offset-by-one">
+					<h2 id="company1">Teladoc Health</h2>
+					<img class="jobLogos" src="Images/download.png" alt="Teladoc Health">
+					<h3 id="positionCompany1">Software Engineer II</h3>
+					<p id="summaryCompany1">
+						As a Full-Stack Software Engineer, working on Salesforce Stack - making changes to existing large scale application and use Java to primarily
+						do backend development. Also, use SQL, Linux/Unix Systems.
+						There is a lot of problem-solving situations in this position as I also do production
+						support for the retail side of cvs. Using such problem-solving skills help me improve
+						my software development skills because I have to learn and review code for large application to get up to speed and understand
+						how the application work to be able to do any sort of changes.
+					</p>
+				</div>
+			</div>
             <div class="row">
                 <div class="four columns timeline">
-                    <h4 id="timeLine1">October 2019 - February 2021</h4>
+                    <h4 id="timeLine2">October 2019 - February 2021</h4>
                 </div>
                 <div class="seven columns offset-by-one">
-                    <h2 id="company1">Teladoc Health</h2>
-                    <img class="jobLogos" src="Images/download.png" alt="">
-                    <h3 id="positionCompany1">Full-Stack Software Engineer</h3>
-                    <p id="summaryCompany1">
+                    <h2 id="company2">Teladoc Health</h2>
+                    <img class="jobLogos" src="Images/download.png" alt="Teladoc Health">
+                    <h3 id="positionCompany2">Software Engineer I</h3>
+                    <p id="summaryCompany2">
                         As a Full-Stack Software Engineer, working on Salesforce Stack - making changes to existing large scale application and use Java to primarily
                         do backend development. Also, use SQL, Linux/Unix Systems.
                         There is a lot of problem-solving situations in this position as I also do production
@@ -116,13 +134,13 @@
             </div>
             <div class="row">
                 <div class="four columns timeline">
-                    <h4 id="timeLine2">August 2019 - December 2019</h4>
+                    <h4 id="timeLine3">August 2019 - December 2019</h4>
                 </div>
                 <div class="seven columns offset-by-one">
-                    <h2 id="company2">Alumbrado, Inc</h2>
-                    <img class="jobLogos" src="Images/alumbrado-logo.png" alt="">
-                    <h3 id="positionCompany2">Lead Software Engineer</h3>
-                    <p id="summaryCompany2">
+                    <h2 id="company3">Alumbrado, Inc</h2>
+                    <img class="jobLogos" src="Images/alumbrado-logo.png" alt="Alumbrado">
+                    <h3 id="positionCompany3">Lead Software Engineer</h3>
+                    <p id="summaryCompany3">
                         As Lead Software Engineer, leading the programming planning, requirements gathering,
                         and development cycle. We worked on developing company website and main iOS application.
                         Working with HTML, and Javascript primarily to develop company's website from scratch to show what
@@ -134,13 +152,13 @@
             </div>
             <div class="row">
                 <div class="four columns timeline">
-                    <h4 id="timeLine3">January 2019 - September 2019</h4>
+                    <h4 id="timeLine4">January 2019 - September 2019</h4>
                 </div>
                 <div class="seven columns offset-by-one">
-                    <h2 id="company3">CVS Health</h2>
-                    <img class="jobLogos" src="Images/favicon.png" alt="">
-                    <h3 id="positionCompany3">Software Engineer</h3>
-                    <p id="summaryCompany3">
+                    <h2 id="company4">CVS Health</h2>
+                    <img class="jobLogos" src="Images/favicon.png" alt="CVS Health">
+                    <h3 id="positionCompany4">Software Engineer</h3>
+                    <p id="summaryCompany4">
                         As a Software Engineer, I work on making changes to existing large scale application and use Java to primarily
                         do backend development. Also, use SQL, Linux/Unix Systems.
                         There is a lot of problem-solving situations in this position as I also do production
@@ -152,13 +170,13 @@
             </div>
             <div class="row">
                 <div class="four columns timeline">
-                    <h4 id="timeLine4">July 2018 - June 2019</h4>
+                    <h4 id="timeLine5">July 2018 - June 2019</h4>
                 </div>
                 <div class="seven columns offset-by-one">
-                    <h2 id="company4">IDEMIA</h2>
-                    <img class="jobLogos" src="Images/idemiaLogo1.png" alt="">
-                    <h3 id="positionCompany4">Data Analyst</h3>
-                    <p id="summaryCompany4">
+                    <h2 id="company5">IDEMIA</h2>
+                    <img class="jobLogos" src="Images/idemiaLogo1.png" alt="IDEMIA">
+                    <h3 id="positionCompany5">Data Analyst</h3>
+                    <p id="summaryCompany5">
                         Primarily in charge of automating existing reports to improve efficiency and save the
                         department money. In the year I was there about 10 reports were automated, helped the department saved
                         enough work hours equivalent to a full-time employee salary making 60K. The reports that I helped automated
@@ -171,13 +189,13 @@
             </div>
             <div class="row">
                 <div class="four columns timeline">
-                    <h4 id="timeLine5">September 2018 - January 2019</h4>
+                    <h4 id="timeLine6">September 2018 - January 2019</h4>
                 </div>
                 <div class="seven columns offset-by-one">
-                    <h2 id="company5">Tuft Health Plan</h2>
-                    <img class="jobLogos" src="Images/TUFTS-Logo.png" alt="">
-                    <h3 id="positionCompany5">Software Developer</h3>
-                    <p id="summaryCompany5">
+                    <h2 id="company6">Tuft Health Plan</h2>
+                    <img class="jobLogos" src="Images/TUFTS-Logo.png" alt="Tuft Health Plan">
+                    <h3 id="positionCompany6">Software Developer</h3>
+                    <p id="summaryCompany6">
                         In this role, I was faced with the challenge of learning a new language. Learning Lotus Notes framework
                         initially was tough because it was new compared to anything I had done before. I was able to overcome my learning curve quickly
                         due to my ability to identify patterns, allowing me to see the similarities with Visual Basic for Application
@@ -193,7 +211,7 @@
                 </div>
                 <div class="seven columns offset-by-one">
                     <h2 id="company7">Enterprise Rent-A-Car</h2>
-                    <img class="jobLogos" src="Images/enterpriseLogo.png" alt="">
+                    <img class="jobLogos" src="Images/enterpriseLogo.png" alt="Enterprise Rent-A-Car">
                     <h3 id="positionCompany7">Management Trainee Intern</h3>
                     <p id="summaryCompany7">
                         Provided excellent customer service and committed to show a great work ethic and outperformed others.
